# Collector

./: CMakeLists.txt  README.md  main.cpp
Includes/: config.cfg
src/: CMakeLists.txt  application.cpp  application.h
src/Event/: event.cpp  event.h  eventloop.cpp  eventloop.h
